--- a/cn/api-reference/endpoint/video-generation.mdx
+++ b/cn/api-reference/endpoint/video-generation.mdx
@@ -5,9 +5,30 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 
 ## 简介
 
-视频生成接口支持文生视频、图生视频等多种功能。通过统一的API接口，您可以调用Sora 2、Veo、阿里万相、豆包 Seedance 等多个主流视频生成模型。
+视频生成接口支持文生视频、图生视频、视频生视频等多种功能。通过统一的API接口，您可以调用Sora 2、Veo、阿里万相、豆包 Seedance 等多个主流视频生成模型。
 
 **重要提示**：视频生成是异步任务，需要先提交任务获取任务ID，然后轮询查询任务状态直到成功。
+
+## 支持的模型及功能
+
+| 模型系列 | 模型名称 | 支持功能 |
+|---------|---------|---------|
+| **Sora 2** | `sora-2` | 文生视频、图生视频、视频生视频（Remix 模式） |
+| **谷歌 Veo** | `veo-3.0-fast-generate-001` | 文生视频（首帧模式） |
+| | `veo-3.1-fast-generate-preview` | 文生视频（首帧模式、首尾帧模式） |
+| **阿里万相** | `wan2.5-t2v-preview` | 文生视频 |
+| | `wan2.5-i2v-preview` | 图生视频（首帧模式） |
+| **豆包 Seedance** | `doubao-seedance-1-0-lite-t2v-250428` | 文生视频 |
+| | `doubao-seedance-1-0-lite-i2v-250428` | 图生视频（首帧模式、首尾帧模式、参考图模式） |
+| | `doubao-seedance-1-0-pro-250528` | 文生视频（首帧模式） |
+
+**功能说明**：
+- **文生视频（T2V）**：仅通过文本提示词生成视频
+- **图生视频（I2V）**：基于参考图片生成视频
+  - **首帧模式**：使用首帧图片作为起始画面
+  - **首尾帧模式**：使用首帧和尾帧图片控制视频起止画面
+  - **参考图模式**：使用参考图片作为风格参考（仅部分模型支持）
+- **视频生视频（Remix）**：基于已有视频重新生成（仅 Sora 2 支持）
 
 ## 认证
 
@@ -18,11 +39,23 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 ## 请求参数
 
 <ParamField body="model" type="string" required>
-  模型标识，支持的模型包括：
-  - Sora 2 系列：`sora-2`
-  - Veo 系列：`veo-3.1-generate-preview`、`veo-3.1-fast-generate-preview`、`veo-3.0-generate-preview`、`veo-3.0-fast-generate-001`
-  - 阿里万相系列：`wan2.5-i2v-preview`
-  - 豆包 Seedance 系列：`doubao-seedance-1-0-pro-250528`、`doubao-seedance-1-0-lite-t2v-250428`、`doubao-seedance-1-0-lite-i2v-250428`、`doubao-seaweed-1-0-t2v-250428`、`wan2-1-14b-i2v-250417`、`wan2-1-14b-flf2v-250417`
+  模型标识，支持的模型及功能如下：
+
+  **Sora 2 系列**：
+  - `sora-2` - 支持文生视频、图生视频、视频生视频（Remix 模式）
+
+  **谷歌 Veo 系列**：
+  - `veo-3.0-fast-generate-001` - 文生视频（首帧模式）
+  - `veo-3.1-fast-generate-preview` - 文生视频（首帧模式、首尾帧模式）
+
+  **阿里万相系列**：
+  - `wan2.5-t2v-preview` - 文生视频
+  - `wan2.5-i2v-preview` - 图生视频（首帧模式）
+
+  **豆包 Seedance 系列**：
+  - `doubao-seedance-1-0-lite-t2v-250428` - 文生视频
+  - `doubao-seedance-1-0-lite-i2v-250428` - 图生视频（首帧模式、首尾帧模式、参考图模式）
+  - `doubao-seedance-1-0-pro-250528` - 文生视频（首帧模式）
 </ParamField>
 
 <ParamField body="prompt" type="string" required>
