--- a/cn/api-reference/endpoint/chat.mdx
+++ b/cn/api-reference/endpoint/chat.mdx
@@ -21,6 +21,7 @@ api: 'POST https://llm.ai-nebula.com/v1/chat/completions'
   - Claude 系列：`claude-sonnet-4-20250514`、`claude-3.7-sonnet-20250219` 等
   - DeepSeek 系列：`deepseek-v3`、`deepseek-v3-1-250821` 等
   - Grok 系列：`grok-4`、`grok-3`、`grok-3-fast`、`grok-4-fast-reasoning` 等
+  - Gemini 系列：`gemini-2.5-flash`、`gemini-2.5-pro`、`gemini-3-pro-preview` 及其 `-thinking/-nothinking` / `-thinking-<预算>` / `-thinking-low/-thinking-high` 后缀变体
   - 通义千问系列：`qwen3-omni-flash` 等
 </ParamField>
 
@@ -327,6 +328,56 @@ curl -X POST "https://llm.ai-nebula.com/v1/chat/completions" \
     <Warning>
     通义千问的深度思考功能必须配合 `stream: true` 使用。如果设置了 `enable_thinking: true` 但 `stream: false`，系统会自动关闭深度思考以避免上游报错。
     </Warning>
+  </Tab>
+
+  <Tab title="Gemini">
+    参考 Gemini 思考模式文档，主要开启方式：
+
+    - **模型后缀**：`-thinking` 自动预算；`-thinking-<数字>` 精确预算（如 `gemini-2.5-flash-thinking-8192`）；`-nothinking` 关闭；`gemini-3-pro-preview-thinking-low/high` 直接指定级别
+    - **extra_body 配置**：`extra_body.google.thinking_config.thinking_budget` + `include_thoughts`，支持特殊值：`-1` 自动开启、`0` 关闭、`>0` 指定预算；需 `stream: true`
+    - **reasoning_effort**：在 `-thinking` 且未设置 `max_tokens` 时可用（`low/medium/high`≈20%/50%/80% 预算）
+    - **Gemini 3 Pro Preview**：使用 `thinking_level`（`LOW`/`HIGH`，默认 HIGH），可同时结合搜索
+    - **搜索开启**：推荐 OpenAI 兼容工具 `"tools":[{"type":"function","function":{"name":"googleSearch"}}]`；或透传 `extra_body.google.tools:[{"googleSearch":{}}]`
+    - **注意**：需启用思考适配器（服务端配置），思考预算占用输出 token，务必使用 `stream: true` 才能看到 `reasoning_content`
+
+    示例（2.5 指定预算）：
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/chat/completions" \
+      -H "Content-Type: application/json" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -d '{
+        "model": "gemini-2.5-flash",
+        "messages": [
+          {"role":"user","content":"给出一道中等难度的几何题并分步解析。"}
+        ],
+        "extra_body": {
+          "google": {
+            "thinking_config": { "thinking_budget": 6000, "include_thoughts": true }
+          }
+        },
+        "stream": true
+      }'
+    ```
+
+    示例（3 Pro Preview 思考+搜索）：
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/chat/completions" \
+      -H "Content-Type: application/json" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -d '{
+        "model": "gemini-3-pro-preview",
+        "messages": [
+          {"role":"user","content":"Google 搜索一下今天广州的天气怎么样"}
+        ],
+        "generationConfig": {
+          "thinkingConfig": { "thinkingLevel": "LOW" }
+        },
+        "tools": [
+          { "type": "function", "function": { "name": "googleSearch" } }
+        ],
+        "stream": true
+      }'
+    ```
   </Tab>
 </Tabs>
 
